<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="15sp">

    <TextView
        android:id="@+id/promptTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_list_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/title_of_new_list"
        android:autofillHints="@string/title_of_new_list"
        android:inputType="text" />

    <Button
        android:id="@+id/addTitleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancelTitleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp" />

</LinearLayout>